--- a/appspec.yml
+++ b/appspec.yml
@@ -1,10 +1,8 @@
 version: 0.0
 os: linux
-files:
-    - source: /index.html
-      destination: /var/www/html/
+
 hooks:
   BeforeInstall:
-    - location: scripts/start_server
+    - location: scripts/ansible_eqmfsip
       timeout: 300
-      runas: root
+      runas: msf
